--- a/videos.html
+++ b/videos.html
@@ -24,16 +24,16 @@
 <body class="animate__animated animate__fadeIn">
   <header>
     <h1 id="title">映像</h1>
-    <p id="sbutitle">Video</p>
+    <p id="sbutitle">Videos</p>
     <ul class="nav justify-content-center">
       <li class="nav-item">
         <a class="nav-link" href="index.html">ホーム</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="videos.html">映像</a>
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">映像</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">インタラクティブ</a>
+        <a class="nav-link" href="interactive.html">インタラクティブ</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="programming.html">プログラミング</a>
@@ -52,7 +52,7 @@
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Video</li>
+            <li class="breadcrumb-item active" aria-current="page">Videos</li>
           </ol>
         </nav>
         <h2>映像分野</h2>
@@ -72,6 +72,20 @@
         <p class="Description">おじさんを除くキャラ、オブジェクトは、blenderで自身が製作したものです。<br>
           等身の大きい女性のキャラは、1年次冬休み期間で初めてキャラモデリングを行った際に作ったキャラクターを使用しています。</p>
         <p class="Use">使用ソフト｜blender,Unity3D
+        </p>
+      </div>
+    </div>
+    <div class="card-container">
+      <div class="cardVideo">
+        <iframe src="https://www.youtube-nocookie.com/embed/0kzhFd1S4_g" title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+      <div class="cardComment">
+        <h2>3Dゲーム「単位3D」</h2>
+        <p class="Dialog">2年後期｜コンピューターリテラシーB</p>
+        <p class="Description">単位を拾うゲーム。大学がモチーフとなっており、キャラクター以外はblenderやUnity上で作成した自作モデルです。</p>
+        <p class="Use">使用ソフト｜blender,Unity3D,DaVinci Resolve,COEIROINK
         </p>
       </div>
     </div>
@@ -100,6 +114,45 @@
         <p class="Dialog">1年前期｜IM基礎演習</p>
         <p class="Description">絵コンテから制作した30秒のショート動画です。</p>
         <p class="Use">使用ソフト｜PremierPro</p>
+      </div>
+    </div>
+    <div class="card-container">
+      <div class="cardVideo">
+        <iframe src="https://www.youtube-nocookie.com/embed/0dam0vJsbMY" title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+      <div class="cardComment">
+        <h2 class="Title">歩いてきて座る</h2>
+        <p class="Dialog">2年後期｜映像演習</p>
+        <p class="Description">歩いてきて座るというお題の元作られた、30秒のショート動画です。</p>
+        <p class="Use">使用ソフト｜DaVinnchi Resolve</p>
+      </div>
+    </div>
+    <div class="card-container">
+      <div class="cardVideo">
+        <iframe src="https://www.youtube-nocookie.com/embed/i4kGkTfrB8I" title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+      <div class="cardComment">
+        <h2 class="Title">喜怒哀楽</h2>
+        <p class="Dialog">2年後期｜映像演習</p>
+        <p class="Description">喜怒哀楽のどれかを表現するというお題の元作られた、約30秒のショート動画です。</p>
+        <p class="Use">使用ソフト｜DaVinnchi Resolve</p>
+      </div>
+    </div>
+    <div class="card-container">
+      <div class="cardVideo">
+        <iframe src="https://www.youtube-nocookie.com/embed/LIdMA5DUS1o" title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+      <div class="cardComment">
+        <h2 class="Title">コインを拾う</h2>
+        <p class="Dialog">1年前期｜IM基礎演習</p>
+        <p class="Description">コインを拾うAとそれを見るBというお題の元作られた、グループ制作のショーと動画です。</p>
+        <p class="Use">使用ソフト｜DaVinnchi Resolve,AviUtl</p>
       </div>
     </div>
     <div class="menu-container">
