--- a/web.html
+++ b/web.html
@@ -33,13 +33,13 @@
         <a class="nav-link" href="videos.html">映像</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">インタラクティブ</a>
+          <a class="nav-link" href="interactive.html">インタラクティブ</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="programming.html">プログラミング</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="web.html">ウェブ</a>
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">ウェブ</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="others.html">その他</a>
