--- a/others.html
+++ b/others.html
@@ -33,7 +33,7 @@
         <a class="nav-link" href="videos.html">映像</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">インタラクティブ</a>
+        <a class="nav-link" href="interactive.html">インタラクティブ</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="programming.html">プログラミング</a>
@@ -42,10 +42,10 @@
         <a class="nav-link" href="web.html">ウェブ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="others.html">その他</a>
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">その他</a>
       </li>
     </ul>
-    </header>
+  </header>
   <main>
     <div class="card-container">
       <div class="cardDescription">
@@ -59,72 +59,137 @@
         <p>インタラクティブメディア学科外の授業と、授業ではない部分での活動です。</p>
       </div>
     </div>
-    <div class="card-container">
-      <div class="cardImg">  
-        <div class="slider-container">
-        <div class="slider">
-          <img src="medias/nakano2022/001.webp" alt="Image 1">
-          <img src="medias/nakano2022/002.webp" alt="Image 2">
-          <img src="medias/nakano2022/003.webp" alt="Image 3">
-          <img src="medias/nakano2022/004.webp" alt="Image 4">
-          <img src="medias/nakano2022/005.webp" alt="Image 5">
-          <img src="medias/nakano2022/006.webp" alt="Image 6">
-          <img src="medias/nakano2022/007.webp" alt="Image 7">
-          <img src="medias/nakano2022/008.webp" alt="Image 8">
-          <img src="medias/nakano2022/009.webp" alt="Image 9">
-          <img src="medias/nakano2022/010.webp" alt="Image 10">
-          <img src="medias/nakano2022/011.webp" alt="Image 11">
-          <img src="medias/nakano2022/012.webp" alt="Image 12">
-          <img src="medias/nakano2022/013.webp" alt="Image 13">
-          <img src="medias/nakano2022/014.webp" alt="Image 14">
-          <img src="medias/nakano2022/015.webp" alt="Image 15">
-          <img src="medias/nakano2022/016.webp" alt="Image 16">
-          <img src="medias/nakano2022/017.webp" alt="Image 17">
-          <!-- さらに追加の画像をここに追記 -->
+      <div class="card-container">
+        <div class="cardImg">
+          <div class="slider-container" id="slider-container1">
+            <div class="slider">
+              <img src="medias/nakano2022/001.webp" alt="Image 1">
+              <img src="medias/nakano2022/002.webp" alt="Image 2">
+              <img src="medias/nakano2022/003.webp" alt="Image 3">
+              <img src="medias/nakano2022/004.webp" alt="Image 4">
+              <img src="medias/nakano2022/005.webp" alt="Image 5">
+              <img src="medias/nakano2022/006.webp" alt="Image 6">
+              <img src="medias/nakano2022/007.webp" alt="Image 7">
+              <img src="medias/nakano2022/008.webp" alt="Image 8">
+              <img src="medias/nakano2022/009.webp" alt="Image 9">
+              <img src="medias/nakano2022/010.webp" alt="Image 10">
+              <img src="medias/nakano2022/011.webp" alt="Image 11">
+              <img src="medias/nakano2022/012.webp" alt="Image 12">
+              <img src="medias/nakano2022/013.webp" alt="Image 13">
+              <img src="medias/nakano2022/014.webp" alt="Image 14">
+              <img src="medias/nakano2022/015.webp" alt="Image 15">
+              <img src="medias/nakano2022/016.webp" alt="Image 16">
+              <img src="medias/nakano2022/017.webp" alt="Image 17">
+              <!-- さらに追加の画像をここに追記 -->
+            </div>
+            <button class="prev-button" onclick="changeSlide(-1, 'slider-container1')">&lt;</button>
+            <button class="next-button" onclick="changeSlide(1, 'slider-container1')">&gt;</button>
+          </div>
         </div>
-        <button class="prev-button">&lt;</button>
-        <button class="next-button">&gt;</button>
+        <div class="cardComment">
+          <h2>中野祭企画展2022</h2>
+          <p class="Dialog">1年後期｜小規模団体</p>
+          <p class="Description">映像の上映を行いました。<br>
+          </p>
+          <p class="Use">使用ソフト｜none</p>
+        </div>
       </div>
+    <div class="card-container">
+      <div class="cardImg">
+        <div class="slider-container" id="slider-container2">
+          <div class="slider">
+            <img src="medias/nakano2023/001.avif" alt="Image 1">
+            <img src="medias/nakano2023/002.avif" alt="Image 2">
+            <img src="medias/nakano2023/003.avif" alt="Image 3">
+            <img src="medias/nakano2023/004.avif" alt="Image 4">
+            <img src="medias/nakano2023/005.avif" alt="Image 5">
+            <!-- さらに追加の画像をここに追記 -->
+          </div>
+          <button class="prev-button" onclick="changeSlide(-1, 'slider-container1')">&lt;</button>
+          <button class="next-button" onclick="changeSlide(1, 'slider-container1')">&gt;</button>
+        </div>
       </div>
       <div class="cardComment">
-        <h2>中野祭企画展2022</h2>
-        <p class="Dialog">1年後期｜小規模団体</p>
+        <h2>中野祭企画展2023</h2>
+        <p class="Dialog">2年後期｜小規模団体</p>
         <p class="Description">映像の上映を行いました。<br>
         </p>
         <p class="Use">使用ソフト｜none</p>
       </div>
-    </div>
-    <div class="card-container">
-      <div class="cardVideo">
-        <iframe src="https://www.youtube-nocookie.com/embed/COUkTir72eo" title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen></iframe>
+      <div class="card-container">
+        <div class="cardImg">
+          <div class="slider-container" id="slider-container3">
+            <div class="slider">
+              <img src="medias/sketch/001.avif" alt="Image 1">
+              <img src="medias/sketch/002.avif" alt="Image 2">
+              <img src="medias/sketch/004.avif" alt="Image 4">
+              <img src="medias/sketch/005.avif" alt="Image 5">
+              <!-- さらに追加の画像をここに追記 -->
+            </div>
+            <button class="prev-button" onclick="changeSlide(-1, 'slider-container1')">&lt;</button>
+            <button class="next-button" onclick="changeSlide(1, 'slider-container1')">&gt;</button>
+          </div>
+        </div>
+        <div class="cardComment">
+          <h2>デッサン</h2>
+          <p class="Dialog">2年後期｜基礎デッサン</p>
+          <p class="Description">鉛筆でのアナログデッサンです。<br>
+          </p>
+          <p class="Use">使用ソフト｜none</p>
+        </div>
       </div>
-      <div class="cardComment">
-        <h2>手書きアニメ</h2>
-        <p class="Dialog">2年前期｜アニメーション工房</p>
-        <p class="Description">手書きアニメーションを製作しました。</p>
-        <p class="Use">使用ソフト｜PremierePro</p>
+      <div class="card-container">
+        <div class="cardImg">
+          <div class="slider-container" id="slider-container4">
+            <div class="slider">
+              <img src="medias/gifAnime/gifAnime01.gif" alt="Image 1">
+              <img src="medias/gifAnime/gifAnime02.gif" alt="Image 2">
+              <img src="medias/gifAnime/gifAnime03.gif" alt="Image 3">
+              <!-- さらに追加の画像をここに追記 -->
+            </div>
+            <button class="prev-button" onclick="changeSlide(-1, 'slider-container1')">&lt;</button>
+            <button class="next-button" onclick="changeSlide(1, 'slider-container1')">&gt;</button>
+          </div>
+        </div>
+        <div class="cardComment">
+          <h2>アニメーション制作</h2>
+          <p class="Dialog">2年後期｜ワークショップ</p>
+          <p class="Description">デジタルでのアニメーション制作を行いました<br>
+          </p>
+          <p class="Use">使用ソフト｜ClipSTUDIO,AviUtl</p>
+        </div>
       </div>
-    </div>
-    <div class="menu-container">
-      <p class="menu-button">SELECT</p>
-      <div class="hover-menu">
-        <ul>
-          <li><a href="videos.html">映像</a></li>
-          <li><a href="interactive.html">インタラクティブ</a></li>
-          <li><a href="programming.html">プログラミング</a></li>
-          <li><a href="web.html">ウェブ</a></li>
-          <li><a href="others.html">その他</a></li>
-        </ul>
+      <div class="card-container">
+        <div class="cardVideo">
+          <iframe src="https://www.youtube-nocookie.com/embed/COUkTir72eo" title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        </div>
+        <div class="cardComment">
+          <h2>手書きアニメ</h2>
+          <p class="Dialog">2年前期｜アニメーション工房</p>
+          <p class="Description">手書きアニメーションを製作しました。</p>
+          <p class="Use">使用ソフト｜PremierePro</p>
+        </div>
       </div>
-    </div>
-    <div class="topLink">
-      <p id="page-top">
-        <a href="#">ページ上部に戻る
-        </a>
-      </p>
-    </div>
+      <div class="menu-container">
+        <p class="menu-button">SELECT</p>
+        <div class="hover-menu">
+          <ul>
+            <li><a href="videos.html">映像</a></li>
+            <li><a href="interactive.html">インタラクティブ</a></li>
+            <li><a href="programming.html">プログラミング</a></li>
+            <li><a href="web.html">ウェブ</a></li>
+            <li><a href="others.html">その他</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="topLink">
+        <p id="page-top">
+          <a href="#">ページ上部に戻る
+          </a>
+        </p>
+      </div>
   </main>
   <footer>
     <p>Copyright © i2224046 All rights reserved.｜<a class="forIndex" href="index.html">ホームに戻る</a></p>
