--- a/programming.html
+++ b/programming.html
@@ -18,34 +18,34 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@200;600&family=Noto+Serif+JP&display=swap"
-          rel="stylesheet">
+        rel="stylesheet">
 </head>
 
 <body class="animate__animated animate__fadeIn">
     <header>
-      <h1 id="title">プログラミング</h1>
-      <p id="sbutitle">Programming</p>
-      <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">ホーム</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="videos.html">映像</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">インタラクティブ</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="programming.html">プログラミング</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="web.html">ウェブ</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="others.html">その他</a>
-        </li>
-      </ul>
-        </header>
+        <h1 id="title">プログラミング</h1>
+        <p id="sbutitle">Programming</p>
+        <ul class="nav justify-content-center">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">ホーム</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="videos.html">映像</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="interactive.html">インタラクティブ</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">プログラミング</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="web.html">ウェブ</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="others.html">その他</a>
+            </li>
+        </ul>
+    </header>
     <main>
         <div class="card-container">
             <div class="cardDescription">
@@ -102,9 +102,9 @@
             <div class="cardSquare">
                 <div style="position:relative;height:0;padding-bottom:100%;">
                     <iframe style="position:absolute;top:-100px;left:0;width:570px;height:650px;"
-                            src="https://makecode.microbit.org/---run?id=S40313-95450-98911-11225"
-                            allowfullscreen="allowfullscreen"
-                            sandbox="allow-popups allow-forms allow-scripts allow-same-origin" frameborder="0"></iframe>
+                        src="https://makecode.microbit.org/---run?id=S40313-95450-98911-11225"
+                        allowfullscreen="allowfullscreen"
+                        sandbox="allow-popups allow-forms allow-scripts allow-same-origin" frameborder="0"></iframe>
                 </div>
             </div>
             <div class="cardComment">
@@ -120,40 +120,41 @@
             </div>
         </div>
         <div class="card-container">
-                <div class="cardVideo">
-                    <iframe src="https://www.youtube-nocookie.com/embed/bTYjdm6GVFI" title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen></iframe>
-                </div>
-                <div class="cardComment">
-                    <h2>ペットボトル卓上サーバー</h2>
-                    <p class="Dialog">2年前期｜デバイス演習Ⅱ</p>
-                    <p class="Description">
-                        机の上に置けるペットボトルのウォーターサーバーです。<br>
-                    </p>
-                    <p class="Use">使用ソフト｜micro:bit,Fusion</p>
-                </div>
+            <div class="cardVideo">
+                <iframe src="https://www.youtube-nocookie.com/embed/bTYjdm6GVFI" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
-            <div class="menu-container">
-                <p class="menu-button">SELECT</p>
-                <div class="hover-menu">
-                    <ul>
-                        <li><a href="videos.html">映像</a></li>
-                        <li><a href="interactive.html">インタラクティブ</a></li>
-                        <li><a href="programming.html">プログラミング</a></li>
-                        <li><a href="web.html">ウェブ</a></li>
-                        <li><a href="others.html">その他</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="topLink">
-                <p id="page-top">
-                    <a href="#">
-                        ページ上部に戻る
-                    </a>
+            <div class="cardComment">
+                <h2>ペットボトル卓上サーバー</h2>
+                <p class="Dialog">2年前期｜デバイス演習Ⅱ</p>
+                <p class="Description">
+                    机の上に置けるペットボトルのウォーターサーバーです。<br>
                 </p>
+                <p class="Use">使用ソフト｜micro:bit,Fusion</p>
             </div>
-</main>
+        </div>
+        <div class="menu-container">
+            <p class="menu-button">SELECT</p>
+            <div class="hover-menu">
+                <ul>
+                    <li><a href="videos.html">映像</a></li>
+                    <li><a href="interactive.html">インタラクティブ</a></li>
+                    <li><a href="programming.html">プログラミング</a></li>
+                    <li><a href="web.html">ウェブ</a></li>
+                    <li><a href="others.html">その他</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="topLink">
+            <p id="page-top">
+                <a href="#">
+                    ページ上部に戻る
+                </a>
+            </p>
+        </div>
+    </main>
     <footer>
         <p>Copyright © i2224046 All rights reserved.｜<a class="forIndex" href="index.html">ホームに戻る</a></p>
     </footer>
