--- a/interactive.html
+++ b/interactive.html
@@ -192,6 +192,45 @@
                 </p>
             </div>
         </div>
+        <div class="card-container">
+            <div class="cardVideo">
+                <iframe src="https://www.youtube-nocookie.com/embed/83eXNGJthv4" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
+            <div class="cardComment">
+                <h2 class="Title">ループアニメーション</h2>
+                <p class="Dialog">3年前期｜インタラクティブアート研究室</p>
+                <p class="Description">
+                    エモーショナルを意識したループアニメーション。<br>
+                    単純な図形のみを使い、無音でも音を感じられるように意識したり、イージングを活用してて質感を表現するなど様々な挑戦をしました。
+                </p>
+                <p class="Use">
+                    使用ソフト｜Unity2D
+                </p>
+            </div>
+        </div>
+        <div class="card-container">
+            <div class="cardVideo">
+                <iframe src="https://www.youtube-nocookie.com/embed/t5YeGL7xMXs" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
+            <div class="cardComment">
+                <h2 class="Title">幻想工場「海の生き物」</h2>
+                <p class="Dialog">3年前期｜インタラクティブアート研究室</p>
+                <p class="Description">
+                    グループ制作の前期最終課題です。<br>
+                    作成したハンドル型のデバイスを回すと、前に鏡になって置いてあるモニターが変化するという作品。<br>
+                    海をテーマとして、環境問題を取り入れた作品となっている。
+                </p>
+                <p class="Use">
+                    使用ソフト｜Unity2D
+                </p>
+            </div>
+        </div>
         <div class="menu-container">
             <p class="menu-button">SELECT</p>
             <div class="hover-menu">
