--- a/videos.html
+++ b/videos.html
@@ -155,6 +155,35 @@
         <p class="Use">使用ソフト｜DaVinnchi Resolve,AviUtl</p>
       </div>
     </div>
+    <div class="card-container">
+      <div class="cardVideo">
+        <iframe src="https://www.youtube-nocookie.com/embed/UukSPTbaiiY" title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+      <div class="cardComment">
+        <h2 class="Title">少女は人類を滅ぼしたい</h2>
+        <p class="Dialog">2年後期｜映像演習</p>
+        <p class="Description">
+          実写合成に重点を置いて作成した短編映像作品<br>
+          After Effectsなどを用いて作成</p>
+        <p class="Use">使用ソフト｜DaVinnchi Resolve,AviUtl</p>
+      </div>
+    </div>
+    <div class="card-container">
+      <div class="cardVideo">
+        <iframe src="https://www.youtube-nocookie.com/embed/CTzHKeMVGIw" title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+      <div class="cardComment">
+        <h2 class="Title">アドブロッカー｜無料トライアル版</h2>
+        <p class="Dialog">3年後期｜映像特講</p>
+        <p class="Description">最終課題。グループ制作の短編映像作品。基本実写映画のような形式で、オープニングに3DCGを用いています。<br>
+          企画、監督、小道具、編集、3DCGモデラー・アニメーターを兼任。7/28完成予定。</p>
+        <p class="Use">使用ソフト｜DaVinnchi Resolve,AviUtl</p>
+      </div>
+    </div>
     <div class="menu-container">
       <p class="menu-button">SELECT</p>
       <div class="hover-menu">
